# opol_processing

./: LICENSE  README.md  pyproject.toml  setup.py
notebooks/: Run OPOL processing.ipynb  Untitled.ipynb
opol_processing/: __init__.py  attenuation.py  calibration.py  cli.py  compression_config.py  filtering.py  hydrometeors.py  phase.py  production.py  radar_codes.py  temperature.py  utils.py  velocity.py
scripts/: badfiles_script.py  dask_pack.py  dpqc_opol.py  gen qsub.ipynb  gen_qsub.ipynb  radar_single.py  zdr_bragg.py
